tests/paczka1/small_fuzzy/34984798.err
Error in line 7: l0vHZ7v6 A650 11,7
Error in line 1: S289 S681 12,2
